--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
         "simple"
     ],
     "license": "MIT",
-    "dependencies": {},
+    "dependencies": {
+        "storybook": "^1.0.0"
+    },
     "peerDependencies": {
         "react": "^16.8.0-alpha.0",
         "react-dom": "^16.8.0-alpha.0"
