--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     ],
     "scripts": {
         "build": "./node_modules/.bin/webpack --mode=production",
-        "deploy": "build-storybook -o docs && storybook-to-ghpages",
-        "start": "npm run storybook",
-        "storybook": "start-storybook -p 9001",
-        "test": "jest"
+        "deploy": "storybook-to-ghpages",
+        "start": "npm run storybook"
     },
     "author": "Ben Shope <ben@benshope.com> (https://github.com/benshope)",
     "keywords": [
@@ -54,7 +52,6 @@
         "prettier": "1.16.4",
         "react": "^16.8",
         "react-dom": "^16.8",
-        "uglifyjs-webpack-plugin": "^2.1.2",
         "webpack-cli": "^3.2.3",
         "webpack-node-externals": "^1.7.2"
     },
