--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "react-timezone-picker",
     "version": "1.0.5",
-    "description": "React Modal Hook",
+    "description": "React Timezone Picker",
     "main": "dist/index.js",
     "files": [
         "dist"
@@ -14,12 +14,11 @@
     },
     "author": "Ben Shope <ben@benshope.com> (https://github.com/benshope)",
     "keywords": [
-        "modal",
+        "timezone",
         "react",
         "ui",
-        "hooks",
-        "hook",
-        "react-hooks",
+        "component",
+        "react",
         "small",
         "simple"
     ],
@@ -28,8 +27,8 @@
         "storybook": "^1.0.0"
     },
     "peerDependencies": {
-        "react": "^16.8.0-alpha.0",
-        "react-dom": "^16.8.0-alpha.0"
+        "react": "^16.8",
+        "react-dom": "^16.8"
     },
     "publishConfig": {
         "registry": "https://registry.npmjs.org/"
